plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.2'
	id 'io.spring.dependency-management' version '1.1.2'
}

group = 'com.twitter.clone'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//json
	implementation 'org.json:json:20230227'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// JWT
	compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'


	//OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//Spring
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//Database
	runtimeOnly 'com.mysql:mysql-connector-j'

	//AWS 위한 라이브러리
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	//Spring mail
	//https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.1.2'

	//Redis
	//https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.1.2'

}

tasks.named('test') {
	useJUnitPlatform()
}

bootJar{
	archiveFileName = 'twitter.jar'
}
